# educational_modules_diplom

./: .env.example  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
config/: settings.py  urls.py
education/: models.py  paginators.py  permissions.py  serializers.py  tests.py  urls.py  validators.py  views.py
education/migrations/: 0001_initial.py  0002_module_sequence_number.py
users/: models.py  serializers.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py
